@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2017 SonarSource SA
+ * Copyright (C) 2009-2018 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -21,76 +21,124 @@ package org.sonar.process;
 
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.util.Arrays;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Properties;
+import java.util.UUID;
+import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 
 /**
  * Constants shared by search, web server and app processes.
  * They are almost all the properties defined in conf/sonar.properties.
  */
 public class ProcessProperties {
-  public static final String CLUSTER_ENABLED = "sonar.cluster.enabled";
-  public static final String CLUSTER_CE_DISABLED = "sonar.cluster.ce.disabled";
-  public static final String CLUSTER_SEARCH_DISABLED = "sonar.cluster.search.disabled";
-  public static final String CLUSTER_SEARCH_HOSTS = "sonar.cluster.search.hosts";
-  public static final String CLUSTER_WEB_DISABLED = "sonar.cluster.web.disabled";
-  public static final String CLUSTER_HOSTS = "sonar.cluster.hosts";
-  public static final String CLUSTER_PORT = "sonar.cluster.port";
-  public static final String CLUSTER_NETWORK_INTERFACES = "sonar.cluster.networkInterfaces";
-  public static final String CLUSTER_NAME = "sonar.cluster.name";
-  public static final String HAZELCAST_LOG_LEVEL = "sonar.log.level.app.hazelcast";
-  public static final String CLUSTER_WEB_LEADER = "sonar.cluster.web.startupLeader";
-  // Internal property used by sonar-application to share the local endpoint of Hazelcast
-  public static final String CLUSTER_LOCALENDPOINT = "sonar.cluster.hazelcast.localEndPoint";
-  // Internal property used by sonar-application to share the local UUID of the Hazelcast member
-  public static final String CLUSTER_MEMBERUUID = "sonar.cluster.hazelcast.memberUUID";
 
-  public static final String JDBC_URL = "sonar.jdbc.url";
-  public static final String JDBC_DRIVER_PATH = "sonar.jdbc.driverPath";
-  public static final String JDBC_MAX_ACTIVE = "sonar.jdbc.maxActive";
-  public static final String JDBC_MAX_IDLE = "sonar.jdbc.maxIdle";
-  public static final String JDBC_MIN_IDLE = "sonar.jdbc.minIdle";
-  public static final String JDBC_MAX_WAIT = "sonar.jdbc.maxWait";
-  public static final String JDBC_MIN_EVICTABLE_IDLE_TIME_MILLIS = "sonar.jdbc.minEvictableIdleTimeMillis";
-  public static final String JDBC_TIME_BETWEEN_EVICTION_RUNS_MILLIS = "sonar.jdbc.timeBetweenEvictionRunsMillis";
-  public static final String JDBC_EMBEDDED_PORT = "sonar.embeddedDatabase.port";
+  public enum Property {
+    JDBC_URL("sonar.jdbc.url"),
+    JDBC_USERNAME("sonar.jdbc.username", ""),
+    JDBC_PASSWORD("sonar.jdbc.password", ""),
+    JDBC_DRIVER_PATH("sonar.jdbc.driverPath"),
+    JDBC_MAX_ACTIVE("sonar.jdbc.maxActive", "60"),
+    JDBC_MAX_IDLE("sonar.jdbc.maxIdle", "5"),
+    JDBC_MIN_IDLE("sonar.jdbc.minIdle", "2"),
+    JDBC_MAX_WAIT("sonar.jdbc.maxWait", "5000"),
+    JDBC_MIN_EVICTABLE_IDLE_TIME_MILLIS("sonar.jdbc.minEvictableIdleTimeMillis", "600000"),
+    JDBC_TIME_BETWEEN_EVICTION_RUNS_MILLIS("sonar.jdbc.timeBetweenEvictionRunsMillis", "30000"),
+    JDBC_EMBEDDED_PORT("sonar.embeddedDatabase.port"),
 
-  public static final String PATH_DATA = "sonar.path.data";
-  public static final String PATH_HOME = "sonar.path.home";
-  public static final String PATH_LOGS = "sonar.path.logs";
-  public static final String PATH_TEMP = "sonar.path.temp";
-  public static final String PATH_WEB = "sonar.path.web";
+    PATH_DATA("sonar.path.data", "data"),
+    PATH_HOME("sonar.path.home"),
+    PATH_LOGS("sonar.path.logs", "logs"),
+    PATH_TEMP("sonar.path.temp", "temp"),
+    PATH_WEB("sonar.path.web", "web"),
 
-  public static final String SEARCH_HOST = "sonar.search.host";
-  public static final String SEARCH_PORT = "sonar.search.port";
-  public static final String SEARCH_HTTP_PORT = "sonar.search.httpPort";
-  public static final String SEARCH_JAVA_OPTS = "sonar.search.javaOpts";
-  public static final String SEARCH_JAVA_ADDITIONAL_OPTS = "sonar.search.javaAdditionalOpts";
-  public static final String SEARCH_REPLICAS = "sonar.search.replicas";
-  public static final String SEARCH_MINIMUM_MASTER_NODES = "sonar.search.minimumMasterNodes";
-  public static final String SEARCH_INITIAL_STATE_TIMEOUT = "sonar.search.initialStateTimeout";
+    SEARCH_HOST("sonar.search.host", InetAddress.getLoopbackAddress().getHostAddress()),
+    SEARCH_PORT("sonar.search.port", "9001"),
+    SEARCH_HTTP_PORT("sonar.search.httpPort"),
+    SEARCH_JAVA_OPTS("sonar.search.javaOpts", "-Xms512m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError"),
+    SEARCH_JAVA_ADDITIONAL_OPTS("sonar.search.javaAdditionalOpts", ""),
+    SEARCH_REPLICAS("sonar.search.replicas"),
+    SEARCH_MINIMUM_MASTER_NODES("sonar.search.minimumMasterNodes"),
+    SEARCH_INITIAL_STATE_TIMEOUT("sonar.search.initialStateTimeout"),
 
-  public static final String WEB_JAVA_OPTS = "sonar.web.javaOpts";
+    WEB_JAVA_OPTS("sonar.web.javaOpts", "-Xmx512m -Xms128m -XX:+HeapDumpOnOutOfMemoryError"),
+    WEB_JAVA_ADDITIONAL_OPTS("sonar.web.javaAdditionalOpts", ""),
+    WEB_PORT("sonar.web.port"),
 
-  public static final String WEB_JAVA_ADDITIONAL_OPTS = "sonar.web.javaAdditionalOpts";
-  public static final String CE_JAVA_OPTS = "sonar.ce.javaOpts";
-  public static final String CE_JAVA_ADDITIONAL_OPTS = "sonar.ce.javaAdditionalOpts";
+    CE_JAVA_OPTS("sonar.ce.javaOpts", "-Xmx512m -Xms128m -XX:+HeapDumpOnOutOfMemoryError"),
+    CE_JAVA_ADDITIONAL_OPTS("sonar.ce.javaAdditionalOpts", ""),
 
-  /**
-   * Used by Orchestrator to ask for shutdown of monitor process
-   */
-  public static final String ENABLE_STOP_COMMAND = "sonar.enableStopCommand";
+    HTTP_PROXY_HOST("http.proxyHost"),
+    HTTPS_PROXY_HOST("https.proxyHost"),
+    HTTP_PROXY_PORT("http.proxyPort"),
+    HTTPS_PROXY_PORT("https.proxyPort"),
+    HTTP_PROXY_USER("http.proxyUser"),
+    HTTP_PROXY_PASSWORD("http.proxyPassword"),
+    HTTP_NON_PROXY_HOSTS("http.nonProxyHosts"),
+    HTTP_AUTH_NLM_DOMAN("http.auth.ntlm.domain"),
+    SOCKS_PROXY_HOST("socksProxyHost"),
+    SOCKS_PROXY_PORT("socksProxyPort"),
 
-  public static final String WEB_ENFORCED_JVM_ARGS = "-Djava.awt.headless=true -Dfile.encoding=UTF-8";
+    CLUSTER_ENABLED("sonar.cluster.enabled", "false"),
+    CLUSTER_NODE_TYPE("sonar.cluster.node.type"),
+    CLUSTER_SEARCH_HOSTS("sonar.cluster.search.hosts"),
+    CLUSTER_HOSTS("sonar.cluster.hosts"),
+    CLUSTER_NODE_PORT("sonar.cluster.node.port", "9003"),
+    CLUSTER_NODE_HOST("sonar.cluster.node.host"),
+    CLUSTER_NODE_NAME("sonar.cluster.node.name", "sonarqube-" + UUID.randomUUID().toString()),
+    CLUSTER_NAME("sonar.cluster.name", "sonarqube"),
+    CLUSTER_WEB_STARTUP_LEADER("sonar.cluster.web.startupLeader"),
 
-  public static final String CE_ENFORCED_JVM_ARGS = "-Djava.awt.headless=true -Dfile.encoding=UTF-8";
+    AUTH_JWT_SECRET("sonar.auth.jwtBase64Hs256Secret"),
+    SONAR_WEB_SSO_ENABLE("sonar.web.sso.enable", "false"),
+    SONAR_WEB_SSO_LOGIN_HEADER("sonar.web.sso.loginHeader", "X-Forwarded-Login"),
+    SONAR_WEB_SSO_NAME_HEADER("sonar.web.sso.nameHeader", "X-Forwarded-Name"),
+    SONAR_WEB_SSO_EMAIL_HEADER("sonar.web.sso.emailHeader", "X-Forwarded-Email"),
+    SONAR_WEB_SSO_GROUPS_HEADER("sonar.web.sso.groupsHeader", "X-Forwarded-Groups"),
+    SONAR_WEB_SSO_REFRESH_INTERVAL_IN_MINUTES("sonar.web.sso.refreshIntervalInMinutes", "5"),
+    SONAR_SECURITY_REALM("sonar.security.realm"),
+    SONAR_AUTHENTICATOR_IGNORE_STARTUP_FAILURE("sonar.authenticator.ignoreStartupFailure", "false"),
 
-  public static final String HTTP_PROXY_HOST = "http.proxyHost";
-  public static final String HTTPS_PROXY_HOST = "https.proxyHost";
-  public static final String HTTP_PROXY_PORT = "http.proxyPort";
-  public static final String HTTPS_PROXY_PORT = "https.proxyPort";
-  public static final String HTTP_PROXY_USER = "http.proxyUser";
-  public static final String HTTP_PROXY_PASSWORD = "http.proxyPassword";
+    SONAR_TELEMETRY_ENABLE("sonar.telemetry.enable", "true"),
+    SONAR_TELEMETRY_URL("sonar.telemetry.url", "https://telemetry.sonarsource.com/sonarqube"),
+    SONAR_TELEMETRY_FREQUENCY_IN_SECONDS("sonar.telemetry.frequencyInSeconds", "21600"),
+
+    SONAR_UPDATECENTER_ACTIVATE("sonar.updatecenter.activate", "true"),
+
+    SONARCLOUD_ENABLED("sonar.sonarcloud.enabled", "false"),
+
+    /**
+     * Used by Orchestrator to ask for shutdown of monitor process
+     */
+    ENABLE_STOP_COMMAND("sonar.enableStopCommand");
+
+    private final String key;
+    private final String defaultValue;
+
+    Property(String key, @Nullable String defaultValue) {
+      this.key = key;
+      this.defaultValue = defaultValue;
+    }
+
+    Property(String key) {
+      this(key, null);
+    }
+
+    public String getKey() {
+      return key;
+    }
+
+    public String getDefaultValue() {
+      Objects.requireNonNull(defaultValue, "There's no default value on this property");
+      return defaultValue;
+    }
+
+    public boolean hasDefaultValue() {
+      return defaultValue != null;
+    }
+  }
 
   private ProcessProperties() {
     // only static stuff
@@ -102,7 +150,15 @@ public class ProcessProperties {
       props.setDefault(entry.getKey().toString(), entry.getValue().toString());
     }
 
-    fixPortIfZero(props, SEARCH_HOST, SEARCH_PORT);
+    fixPortIfZero(props, Property.SEARCH_HOST.getKey(), Property.SEARCH_PORT.getKey());
+  }
+
+  public static Properties defaults() {
+    Properties defaults = new Properties();
+    defaults.putAll(Arrays.stream(Property.values())
+      .filter(Property::hasDefaultValue)
+      .collect(Collectors.toMap(Property::getKey, Property::getDefaultValue)));
+    return defaults;
   }
 
   private static void fixPortIfZero(Props props, String addressPropertyKey, String portPropertyKey) {
@@ -110,48 +166,10 @@ public class ProcessProperties {
     if ("0".equals(port)) {
       String address = props.nonNullValue(addressPropertyKey);
       try {
-        props.set(portPropertyKey, String.valueOf(NetworkUtils.getNextAvailablePort(InetAddress.getByName(address))));
+        props.set(portPropertyKey, String.valueOf(NetworkUtilsImpl.INSTANCE.getNextAvailablePort(InetAddress.getByName(address))));
       } catch (UnknownHostException e) {
         throw new IllegalStateException("Cannot resolve address [" + address + "] set by property [" + addressPropertyKey + "]", e);
       }
     }
-  }
-
-  public static Properties defaults() {
-    Properties defaults = new Properties();
-    defaults.put(SEARCH_HOST, InetAddress.getLoopbackAddress().getHostAddress());
-    defaults.put(SEARCH_PORT, "9001");
-    defaults.put(SEARCH_JAVA_OPTS, "-Xmx1G -Xms256m -Xss256k -Djna.nosys=true " +
-      "-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly " +
-      "-XX:+HeapDumpOnOutOfMemoryError");
-    defaults.put(SEARCH_JAVA_ADDITIONAL_OPTS, "");
-
-    defaults.put(PATH_DATA, "data");
-    defaults.put(PATH_LOGS, "logs");
-    defaults.put(PATH_TEMP, "temp");
-    defaults.put(PATH_WEB, "web");
-
-    defaults.put(WEB_JAVA_OPTS, "-Xmx512m -Xms128m -XX:+HeapDumpOnOutOfMemoryError");
-    defaults.put(WEB_JAVA_ADDITIONAL_OPTS, "");
-    defaults.put(CE_JAVA_OPTS, "-Xmx512m -Xms128m -XX:+HeapDumpOnOutOfMemoryError");
-    defaults.put(CE_JAVA_ADDITIONAL_OPTS, "");
-    defaults.put(JDBC_MAX_ACTIVE, "60");
-    defaults.put(JDBC_MAX_IDLE, "5");
-    defaults.put(JDBC_MIN_IDLE, "2");
-    defaults.put(JDBC_MAX_WAIT, "5000");
-    defaults.put(JDBC_MIN_EVICTABLE_IDLE_TIME_MILLIS, "600000");
-    defaults.put(JDBC_TIME_BETWEEN_EVICTION_RUNS_MILLIS, "30000");
-
-    defaults.put(CLUSTER_ENABLED, "false");
-    defaults.put(CLUSTER_CE_DISABLED, "false");
-    defaults.put(CLUSTER_WEB_DISABLED, "false");
-    defaults.put(CLUSTER_SEARCH_DISABLED, "false");
-    defaults.put(CLUSTER_NAME, "sonarqube");
-    defaults.put(CLUSTER_NETWORK_INTERFACES, "");
-    defaults.put(CLUSTER_HOSTS, "");
-    defaults.put(CLUSTER_PORT, "9003");
-    defaults.put(HAZELCAST_LOG_LEVEL, "WARN");
-
-    return defaults;
   }
 }
